flapivor/tests/tests-m3/hopix/typechecker/bad/polymorphism2.hopix
fun apply ['a, 'b] (f : 'a -> 'b, x : 'b) : 'a = f (x)

val y : int = apply [int, int](\(x : int) => x, 0)